Source/WebCore/platform/graphics/GlyphMetricsMap.h
@@ -43,12 +43,12 @@ public:
     GlyphMetricsMap() : m_filledPrimaryPage(false) { }
     T metricsForGlyph(Glyph glyph)
     {
-        return locatePage(glyph / GlyphMetricsPage::size)->metricsForGlyph(glyph);
+        return locatePage(glyph / GlyphMetricsPage::size).metricsForGlyph(glyph);
     }
 
     void setMetricsForGlyph(Glyph glyph, const T& metrics)
     {
-        locatePage(glyph / GlyphMetricsPage::size)->setMetricsForGlyph(glyph, metrics);
+        locatePage(glyph / GlyphMetricsPage::size).setMetricsForGlyph(glyph, metrics);
     }
 
 private:
@@ -57,6 +57,17 @@ private:
     public:
         static const size_t size = 256; // Usually covers Latin-1 in a single page.
         std::array<T, size> m_metrics;
+
+        GlyphMetricsPage() = default;
+        GlyphMetricsPage(const T& initialValue)
+        {
+            fill(initialValue);
+        }
+
+        void fill(const T& value)
+        {
+            m_metrics.fill(value);
+        }
 
         T metricsForGlyph(Glyph glyph) const { return m_metrics[glyph % size]; }
         void setMetricsForGlyph(Glyph glyph, const T& metrics)
@@ -69,14 +80,14 @@ private:
         }
     };
     
-    GlyphMetricsPage* locatePage(unsigned pageNumber)
+    GlyphMetricsPage& locatePage(unsigned pageNumber)
     {
         if (!pageNumber && m_filledPrimaryPage)
-            return &m_primaryPage;
+            return m_primaryPage;
         return locatePageSlowCase(pageNumber);
     }
 
-    GlyphMetricsPage* locatePageSlowCase(unsigned pageNumber);
+    GlyphMetricsPage& locatePageSlowCase(unsigned pageNumber);
     
     static T unknownMetrics();
 
@@ -95,27 +106,21 @@ template<> inline FloatRect GlyphMetricsMap<FloatRect>::unknownMetrics()
     return FloatRect(0, 0, cGlyphSizeUnknown, cGlyphSizeUnknown);
 }
 
-template<class T> typename GlyphMetricsMap<T>::GlyphMetricsPage* GlyphMetricsMap<T>::locatePageSlowCase(unsigned pageNumber)
+template<class T> typename GlyphMetricsMap<T>::GlyphMetricsPage& GlyphMetricsMap<T>::locatePageSlowCase(unsigned pageNumber)
 {
-    GlyphMetricsPage* page;
     if (!pageNumber) {
         ASSERT(!m_filledPrimaryPage);
-        page = &m_primaryPage;
+        m_primaryPage.fill(unknownMetrics());
         m_filledPrimaryPage = true;
-    } else {
-        if (!m_pages)
-            m_pages = std::make_unique<HashMap<int, std::unique_ptr<GlyphMetricsPage>>>();
-        auto& pageInMap = m_pages->add(pageNumber, nullptr).iterator->value;
-        if (!pageInMap)
-            pageInMap = std::make_unique<GlyphMetricsPage>();
-        page = pageInMap.get();
+        return m_primaryPage;
     }
 
-    // Fill in the whole page with the unknown glyph information.
-    for (unsigned i = 0; i < GlyphMetricsPage::size; i++)
-        page->setMetricsForIndex(i, unknownMetrics());
-
-    return page;
+    if (!m_pages)
+        m_pages = std::make_unique<HashMap<int, std::unique_ptr<GlyphMetricsPage>>>();
+    auto& pageInMap = m_pages->add(pageNumber, nullptr).iterator->value;
+    if (!pageInMap)
+        pageInMap = std::make_unique<GlyphMetricsPage>(unknownMetrics());
+    return *pageInMap;
 }
     
 } // namespace WebCore
